remove incorrect note

--- a/app/Resources/views/skills/queued.html.twig
+++ b/app/Resources/views/skills/queued.html.twig
@@ -5,7 +5,7 @@
 {% if queue|length %}
 
 <div class="alert alert-info">
-    Current training queue. (<em>Does not take into account implants or boosters AFAIK.</em>)
+    Current training queue.
 </div>
 
 <table class="table">
