wallet just returns a float now

--- a/app/Resources/views/pilot/overview.html.twig
+++ b/app/Resources/views/pilot/overview.html.twig
@@ -37,6 +37,6 @@
 <p>{{ sp|number_format }}</p>
 
 <strong>Wallet</strong>
-<p>{{ isk|number_format }} ISK</p>
+<p>{{ wallet|number_format }} ISK</p>
 
 {% endblock %}
