--- a/templates/pilot/overview.html.twig
+++ b/templates/pilot/overview.html.twig
@@ -3,8 +3,8 @@
 {% block main %}
 
 <div class="alert alert-warning">
-    <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
-    This is under active development. If it breaks, it is because I am a total scrub.
+    <i class="fas fa-exclamation-triangle" aria-hidden="true"></i>
+    This application is under active development. If it breaks, it is because I am a total scrub.
 </div>
 
 <img class="rounded float-right img-thumbnail ml-3" src="{{ character_portrait.px128x128 }}" alt="Character portrait">
