--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -1,45 +1,22 @@
-<div class="d-flex p-3"><strong>EVE Capsuleer Dashboard</strong></div>
+{% macro link(text, route, classes = []) %}
+    {% set current = app.request.get('_route') -%}
+    {% if current == route %}{% set classes = classes|merge(['active']) %}{% endif -%}
 
+    <li class="nav-item">
+        <a class="nav-link{% if classes|length %} {{ classes|join(' ') }}{% endif %}" href="{{ path(route) }}">
+            {{- text }}{% if current == route %} <span class="sr-only">(current)</span>{% endif -%}
+        </a>
+    </li>
+
+{%- endmacro %}
+
+{% import _self as menu -%}
+
+<div class="d-flex p-3"><strong>EVE Dashboard</strong></div>
 <ul class="nav flex-column">
-
-    <li class="nav-item">
-        <span class="nav-link"><i class="fa fa-user mr-1" aria-hidden="true"></i> Pilot</span>
-    </li>
-
-    <li class="nav-item">
-        <a class="nav-link{% if app.request.get('_route') == 'index' %} active{% endif %}" href="{{ path('index') }}">
-            Overview {% if app.request.get('_route') == 'index' %}<span class="sr-only">(current)</span>{% endif %}
-        </a>
-    </li>
-
-    <li class="nav-item">
-        <a class="nav-link{% if app.request.get('_route') == 'assets' %} active{% endif %}" href="{{ path('assets') }}">
-            Assets {% if app.request.get('_route') == 'assets' %}<span class="sr-only">(current)</span>{% endif %}
-        </a>
-    </li>
-
-    <li class="nav-item">
-        <a class="nav-link text-danger" href="{{ path('security.logout') }}">Logout</a>
-    </li>
-
-</ul>
-
-<ul class="nav flex-column">
-
-    <li class="nav-item">
-        <span class="nav-link"><i class="fa fa-book mr-1" aria-hidden="true"></i> Skills</span>
-    </li>
-
-    <li class="nav-item">
-        <a class="nav-link{% if app.request.get('_route') == 'skills.trained' %} active{% endif %}" href="{{ path('skills.trained') }}">
-            Trained {% if app.request.get('_route') == 'skills.trained' %}<span class="sr-only">(current)</span>{% endif %}
-        </a>
-    </li>
-
-    <li class="nav-item">
-        <a class="nav-link{% if app.request.get('_route') == 'skills.queued' %} active{% endif %}" href="{{ path('skills.queued') }}">
-            Queued {% if app.request.get('_route') == 'skills.queued' %}<span class="sr-only">(current)</span>{% endif %}
-        </a>
-    </li>
-
+    {{ menu.link('Overview', 'index') }}
+    {{ menu.link('Assets', 'assets') }}
+    {{ menu.link('Trained', 'skills.trained') }}
+    {{ menu.link('Queued', 'skills.queued') }}
+    {{ menu.link('Logout', 'security.logout', ['text-danger']) }}
 </ul>
